Ajuste na busca por solicitações em espera
